# Ecommerce

./: .env.localexample  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/Orders/: admin.py  models.py  serializers.py  urls.py  views.py
backend/Orders/migrations/: 0001_initial.py  0002_remove_orders_order_quantity_orders_payment_id_and_more.py  0003_cart_total_qty.py
backend/accounts/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
backend/accounts/management/commands/: superuser.py
backend/accounts/migrations/: 0001_initial.py  0002_rename_is_superadmin_user_is_superuser.py
backend/products/: admin.py  models.py  serializers.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py  0002_alter_brand_logo_alter_products_image.py  0003_alter_brand_logo.py  0004_alter_products_image.py
backend/toystore/: settings.py  urls.py
frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(root)/: layout.tsx
frontend/components/: Googlepage.tsx  Spinner.tsx
frontend/components/cartSec/: AddBuyCart.tsx  Cartpage.tsx  CheckoutBtn.tsx
frontend/components/hooks/: index.ts  useApiheaders.ts  (+3 more)
frontend/constants/: constants.ts
frontend/redux/: provider.tsx  store.ts
frontend/types/: types.ts
frontend/utils/: continue-with-Social.ts  index.ts
nginx/: Dockerfile  nginx.conf
(+42 files in other folders)
